# Milestone

./: .env  .env.sample  .gitignore  ML.txt  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
snowsql/: main.py  query_data.py
snowsql/const/: messages.py  settings.py
snowsql/utils/: Filelogger.py  connection.py
